# CMakeTutorial

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeTutorialVersioning.h.in
Include/: dbgUtils.h  foo.h  pch.h
Src/: dbgUtils.cpp  foo.cpp  main.cpp
submodules/: CMakeLists.txt
submodules/services/: services_interfaces.cpp  services_interfaces.h  services_platformdef.h
